--- a/tabela-verdade.html
+++ b/tabela-verdade.html
@@ -58,9 +58,9 @@
     <div id="card-resultado" class="card d-none shadow-lg overflow-auto" style="max-height: 90vh;">
         <div class="card-body text-center">
             <span id="titulo-resultado"></span>
-            <hr>
-            <table class="table">
-                <thead class="thead-light"></thead>
+            <hr class="mb-0">
+            <table class="table table-hover table-sm">
+                <thead class="table-secondary"></thead>
                 <tbody></tbody>
             </table>
         </div>
