--- a/tabela-verdade.html
+++ b/tabela-verdade.html
@@ -7,7 +7,7 @@
     <title>Gerador de Tabela Verdade</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-<body class="d-flex align-items-center justify-content-center vh-100" style="background-color: #d4d4d4; background: url('./cool-background3.png') no-repeat 100%/auto;">
+<body class="d-flex align-items-center justify-content-center vh-100" style="background-color: #d4d4d4; background: url('./cool-background.png') no-repeat 100%/auto;">
     <div class="card shadow-lg mx-4" style="width: 20rem;">
         <div class="card-body text-center">
             <h5 class="card-title">
