--- a/tabela-verdade.html
+++ b/tabela-verdade.html
@@ -9,17 +9,24 @@
 </head>
 <body class="d-flex align-items-center justify-content-center vh-100" style="background-color: #d4d4d4; background: url('./cool-background.png') no-repeat 100%/auto;">
     <div class="card shadow-lg mx-4" style="width: 20rem;">
-        <div class="card-body text-center">
-            <h5 class="card-title">
+        <div class="card-body">
+            <h5 class="card-title text-center">
                 Gerador de Tabela Verdade
             </h5>
-            <p class="card-text">
+            <p class="card-text text-justify">
                 Utilize o campo abaixo para informar a expressão lógica
                 para que seja gerada a tabela verdade.
             </p>
             <hr>
-            <input class="w-100" type="text" name="expressao" id="expressao" <!--disabled-->>
-            <hr>
+            <input class="w-100" type="text" name="expressao" id="expressao" disabled>
+            <hr class="mb-0">
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" value="" id="checkboxAlias">
+                <label class="form-check-label small muted" for="checkboxAlias">
+                    Alias para colunas
+                </label>
+            </div>
+            <hr class="mt-0">
             <div class="p-2">
                 <div class="row gap-2 mb-2">
                     <button class="btn btn-secondary col condicao">~</button>
@@ -33,11 +40,19 @@
                         <button class="btn btn-outline-secondary col parametro">A</button>
                         <button class="btn btn-outline-secondary col parametro">B</button>
                         <button class="btn btn-outline-secondary col parametro">C</button>
+                        <button class="btn btn-outline-secondary col parametro">D</button>
                     </div>
                     <div class="row gap-2 mt-1">
-                        <button class="btn btn-outline-secondary col parametro">D</button>
                         <button class="btn btn-outline-secondary col parametro">E</button>
                         <button class="btn btn-outline-secondary col parametro">F</button>
+                        <button class="btn btn-outline-secondary col parametro">G</button>
+                        <button class="btn btn-outline-secondary col parametro">H</button>
+                    </div>
+                    <div class="row gap-2 mt-1">
+                        <button class="btn btn-outline-secondary col parametro">I</button>
+                        <button class="btn btn-outline-secondary col parametro">J</button>
+                        <button class="btn btn-outline-secondary col parametro">K</button>
+                        <button class="btn btn-outline-secondary col parametro">L</button>
                     </div>
                 </div>
                 <div class="d-flex flex-column">
@@ -55,11 +70,11 @@
             </div>
         </div>
     </div>
-    <div id="card-resultado" class="card d-none shadow-lg overflow-auto" style="max-height: 90vh;">
-        <div class="card-body text-center">
-            <span id="titulo-resultado"></span>
+    <div id="card-resultado" class="card d-none shadow-lg overflow-auto" style="max-height: 90vh; min-width: 20rem;">
+        <div class="card-body text-center px-0 pb-0">
+            <h5 id="titulo-resultado"></h5>
             <hr class="mb-0">
-            <table class="table table-hover table-sm">
+            <table class="table table-hover table-sm table-bordered mb-0">
                 <thead class="table-secondary"></thead>
                 <tbody></tbody>
             </table>
