--- a/tabela-verdade.html
+++ b/tabela-verdade.html
@@ -1,86 +1,153 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gerador de Tabela Verdade</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-</head>
-<body class="d-flex align-items-center justify-content-center vh-100" style="background-color: #d4d4d4; background: url('./cool-background.png') no-repeat 100%/auto;">
-    <div class="card shadow-lg mx-4" style="width: 20rem;">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <style>
+      body {
+        background-color: #d4d4d4;
+        background: url("./cool-background.png") 100% / auto;
+      }
+      .header {
+        position: sticky;
+        top: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <div
+      class="container d-flex align-items-center justify-content-center flex-column"
+    >
+      <div class="card shadow-lg col-8 mt-5" style="width: 20rem">
         <div class="card-body">
-            <h5 class="card-title text-center">
-                Gerador de Tabela Verdade
-            </h5>
-            <p class="card-text text-justify">
-                Utilize o campo abaixo para informar a expressão lógica
-                para que seja gerada a tabela verdade.
-            </p>
-            <hr>
-            <input class="w-100" type="text" name="expressao" id="expressao" disabled>
-            <hr class="mb-0">
-            <div class="form-check form-switch">
-                <input class="form-check-input" type="checkbox" value="" id="checkboxAlias">
-                <label class="form-check-label small muted" for="checkboxAlias">
-                    Alias para colunas
-                </label>
+          <h5 class="card-title text-center">Gerador de Tabela Verdade</h5>
+          <p class="card-text text-justify">
+            Utilize o campo abaixo para informar a expressão lógica para que
+            seja gerada a tabela verdade.
+          </p>
+          <hr />
+          <input class="w-100" type="text" name="expressao" id="expressao" />
+          <hr class="mb-0" />
+          <div class="form-check form-switch">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="checkboxAlias"
+            />
+            <label class="form-check-label small muted" for="checkboxAlias">
+              Alias para colunas
+            </label>
+          </div>
+          <hr class="mt-0" />
+          <div class="p-2">
+            <div class="row gap-2 mb-2">
+              <button class="btn btn-secondary col condicao">~</button>
+              <button class="btn btn-outline-secondary col parenteses">
+                (
+              </button>
+              <button class="btn btn-outline-secondary col parenteses">
+                )
+              </button>
+              <button
+                id="limpar"
+                onclick="Limpar()"
+                class="btn btn-warning col"
+              >
+                C
+              </button>
+              <button
+                id="deletar"
+                onclick="Deletar()"
+                class="btn btn-danger col"
+              >
+                DEL
+              </button>
             </div>
-            <hr class="mt-0">
-            <div class="p-2">
-                <div class="row gap-2 mb-2">
-                    <button class="btn btn-secondary col condicao">~</button>
-                    <button class="btn btn-outline-secondary col parenteses">(</button>
-                    <button class="btn btn-outline-secondary col parenteses">)</button>
-                    <button id="limpar" onclick="Limpar()" class="btn btn-warning col">C</button>
-                    <button id="deletar" onclick="Deletar()" class="btn btn-danger col">DEL</button>
-                </div>
-                <div class="d-flex flex-column mb-1">
-                    <div class="row gap-2">
-                        <button class="btn btn-outline-secondary col parametro">A</button>
-                        <button class="btn btn-outline-secondary col parametro">B</button>
-                        <button class="btn btn-outline-secondary col parametro">C</button>
-                        <button class="btn btn-outline-secondary col parametro">D</button>
-                    </div>
-                    <div class="row gap-2 mt-1">
-                        <button class="btn btn-outline-secondary col parametro">E</button>
-                        <button class="btn btn-outline-secondary col parametro">F</button>
-                        <button class="btn btn-outline-secondary col parametro">G</button>
-                        <button class="btn btn-outline-secondary col parametro">H</button>
-                    </div>
-                    <div class="row gap-2 mt-1">
-                        <button class="btn btn-outline-secondary col parametro">I</button>
-                        <button class="btn btn-outline-secondary col parametro">J</button>
-                        <button class="btn btn-outline-secondary col parametro">K</button>
-                        <button class="btn btn-outline-secondary col parametro">L</button>
-                    </div>
-                </div>
-                <div class="d-flex flex-column">
-                    <div class="row gap-2">
-                        <button class="btn btn-secondary col condicao">^</button>
-                        <button class="btn btn-secondary col condicao">∨</button>
-                        <button class="btn btn-secondary col condicao">⊕</button>
-                    </div>
-                    <div class="row gap-2 mt-1">
-                        <button class="btn btn-secondary col condicao">→</button>
-                        <button class="btn btn-secondary col condicao">↔</button>
-                        <button id="resultado" onclick="GeraTabelaVerdade()" class="btn btn-success col">RES</button>
-                    </div>
-                </div>
+            <div class="d-flex flex-column mb-1">
+              <div class="row gap-2">
+                <button class="btn btn-outline-secondary col parametro">
+                  A
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                  B
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                  C
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                  D
+                </button>
+              </div>
+              <div class="row gap-2 mt-1">
+                <button class="btn btn-outline-secondary col parametro">
+                  E
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                  F
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                  G
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                  H
+                </button>
+              </div>
+              <div class="row gap-2 mt-1">
+                <button class="btn btn-outline-secondary col parametro">
+                  I
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                  J
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                  K
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                  L
+                </button>
+              </div>
             </div>
+            <div class="d-flex flex-column">
+              <div class="row gap-2">
+                <button class="btn btn-secondary col condicao">^</button>
+                <button class="btn btn-secondary col condicao">∨</button>
+                <button class="btn btn-secondary col condicao">⊕</button>
+              </div>
+              <div class="row gap-2 mt-1">
+                <button class="btn btn-secondary col condicao">→</button>
+                <button class="btn btn-secondary col condicao">↔</button>
+                <button
+                  id="resultado"
+                  onclick="GeraTabelaVerdade()"
+                  class="btn btn-success col"
+                >
+                  RES
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>
-    <div id="card-resultado" class="card d-none shadow-lg overflow-auto" style="max-height: 90vh; min-width: 20rem;">
-        <div class="card-body text-center px-0 pb-0">
-            <h5 id="titulo-resultado"></h5>
-            <hr class="mb-0">
-            <table class="table table-hover table-sm table-bordered mb-0">
-                <thead class="table-secondary"></thead>
-                <tbody></tbody>
-            </table>
+      </div>
+      <div id="card-resultado" class="card d-none shadow-lg col-12 my-5">
+        <div class="card-body text-center">
+          <h5 id="titulo-resultado"></h5>
+          <hr class="mb-0" />
+          <table class="table table-hover table-sm table-bordered mb-0">
+            <thead class="table-secondary header"></thead>
+            <tbody></tbody>
+          </table>
         </div>
+      </div>
     </div>
-
     <script src="tabela-verdade.js"></script>
-</body>
+  </body>
 </html>
