--- a/tabela-verdade.html
+++ b/tabela-verdade.html
@@ -26,117 +26,145 @@
     <div
       class="container d-flex align-items-center justify-content-center flex-column"
     >
-      <div class="card shadow-lg col-8 mt-5" style="width: 20rem">
-        <div class="card-body">
-          <h5 class="card-title text-center">Gerador de Tabela Verdade</h5>
-          <p class="card-text text-justify">
-            Utilize o campo abaixo para informar a expressão lógica para que
-            seja gerada a tabela verdade.
-          </p>
-          <hr />
-          <input class="w-100" type="text" name="expressao" id="expressao" />
-          <hr class="mb-0" />
-          <div class="form-check form-switch">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              value=""
-              id="checkboxAlias"
-            />
-            <label class="form-check-label small muted" for="checkboxAlias">
-              Alias para colunas
-            </label>
-          </div>
-          <hr class="mt-0" />
-          <div class="p-2">
-            <div class="row gap-2 mb-2">
-              <button class="btn btn-secondary col condicao">~</button>
-              <button class="btn btn-outline-secondary col parenteses">
-                (
-              </button>
-              <button class="btn btn-outline-secondary col parenteses">
-                )
-              </button>
-              <button
-                id="limpar"
-                onclick="Limpar()"
-                class="btn btn-warning col"
-              >
-                C
-              </button>
-              <button
-                id="deletar"
-                onclick="Deletar()"
-                class="btn btn-danger col"
-              >
-                DEL
-              </button>
+      <div class="d-flex">
+        <div class="card shadow-lg mt-5 mx-3" style="width: 20rem">
+          <div class="card-body">
+            <h5 class="card-title text-center">Gerador de Tabela Verdade</h5>
+            <p class="card-text text-justify">
+              Utilize o campo abaixo para informar a expressão lógica para que
+              seja gerada a tabela verdade.
+            </p>
+            <hr />
+            <input class="w-100" type="text" name="expressao" id="expressao" />
+            <hr class="mb-0" />
+            <div class="form-check form-switch">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="checkboxAlias"
+              />
+              <label class="form-check-label small muted" for="checkboxAlias">
+                Alias para colunas
+              </label>
             </div>
-            <div class="d-flex flex-column mb-1">
-              <div class="row gap-2">
-                <button class="btn btn-outline-secondary col parametro">
-                  A
+            <hr class="mt-0" />
+            <div class="p-2">
+              <div class="row gap-2 mb-2">
+                <button class="btn btn-secondary col condicao">~</button>
+                <button class="btn btn-outline-secondary col parenteses">
+                  (
                 </button>
-                <button class="btn btn-outline-secondary col parametro">
-                  B
+                <button class="btn btn-outline-secondary col parenteses">
+                  )
                 </button>
-                <button class="btn btn-outline-secondary col parametro">
+                <button
+                  id="limpar"
+                  onclick="Limpar()"
+                  class="btn btn-warning col"
+                >
                   C
                 </button>
-                <button class="btn btn-outline-secondary col parametro">
-                  D
-                </button>
-              </div>
-              <div class="row gap-2 mt-1">
-                <button class="btn btn-outline-secondary col parametro">
-                  E
-                </button>
-                <button class="btn btn-outline-secondary col parametro">
-                  F
-                </button>
-                <button class="btn btn-outline-secondary col parametro">
-                  G
-                </button>
-                <button class="btn btn-outline-secondary col parametro">
-                  H
-                </button>
-              </div>
-              <div class="row gap-2 mt-1">
-                <button class="btn btn-outline-secondary col parametro">
-                  I
-                </button>
-                <button class="btn btn-outline-secondary col parametro">
-                  J
-                </button>
-                <button class="btn btn-outline-secondary col parametro">
-                  K
-                </button>
-                <button class="btn btn-outline-secondary col parametro">
-                  L
-                </button>
-              </div>
-            </div>
-            <div class="d-flex flex-column">
-              <div class="row gap-2">
-                <button class="btn btn-secondary col condicao">^</button>
-                <button class="btn btn-secondary col condicao">∨</button>
-                <button class="btn btn-secondary col condicao">⊕</button>
-              </div>
-              <div class="row gap-2 mt-1">
-                <button class="btn btn-secondary col condicao">→</button>
-                <button class="btn btn-secondary col condicao">↔</button>
                 <button
-                  id="resultado"
-                  onclick="GeraTabelaVerdade()"
-                  class="btn btn-success col"
+                  id="deletar"
+                  onclick="Deletar()"
+                  class="btn btn-danger col"
                 >
-                  RES
+                  DEL
                 </button>
+              </div>
+              <div class="d-flex flex-column mb-1">
+                <div class="row gap-2">
+                  <button class="btn btn-outline-secondary col parametro">
+                    A
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    B
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    C
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    D
+                  </button>
+                </div>
+                <div class="row gap-2 mt-1">
+                  <button class="btn btn-outline-secondary col parametro">
+                    E
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    F
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    G
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    H
+                  </button>
+                </div>
+                <div class="row gap-2 mt-1">
+                  <button class="btn btn-outline-secondary col parametro">
+                    I
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    J
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    K
+                  </button>
+                  <button class="btn btn-outline-secondary col parametro">
+                    L
+                  </button>
+                </div>
+              </div>
+              <div class="d-flex flex-column">
+                <div class="row gap-2">
+                  <button class="btn btn-secondary col condicao">^</button>
+                  <button class="btn btn-secondary col condicao">∨</button>
+                  <button class="btn btn-secondary col condicao">⊕</button>
+                </div>
+                <div class="row gap-2 mt-1">
+                  <button class="btn btn-secondary col condicao">→</button>
+                  <button class="btn btn-secondary col condicao">↔</button>
+                  <button
+                    id="resultado"
+                    onclick="GeraTabelaVerdade()"
+                    class="btn btn-success col"
+                  >
+                    RES
+                  </button>
+                </div>
               </div>
             </div>
           </div>
         </div>
+        <div
+          id="card-exemplos"
+          class="card shadow-lg mt-5 mx-3"
+          style="width: 20rem"
+        >
+          <div class="card-body">
+            <h5 class="card-title text-center">Instruções</h5>
+          </div>
+          <hr class="my-0" />
+          <div class="card-body">
+            <h5 class="card-title text-center">Exemplos</h5>
+            <button class="btn btn-outline-primary w-100 my-1 col condicao">
+              A∨E⊕F↔~E^B
+            </button>
+            <button class="btn btn-outline-primary w-100 my-1 col condicao">
+              (A→B)→((A∨C)→(B∨C))
+            </button>
+            <button class="btn btn-outline-primary w-100 my-1 col condicao">
+              (A∨J^F)⊕(A^(G∨K))
+            </button>
+            <button class="btn btn-outline-primary w-100 my-1 col condicao">
+              (A∨J^F)⊕(A^(G^(F↔~A)∨K))
+            </button>
+          </div>
+        </div>
       </div>
+
       <div id="card-resultado" class="card d-none shadow-lg col-12 my-5">
         <div class="card-body text-center">
           <h5 id="titulo-resultado"></h5>
