Adicionado opção de output no formato VF ou 01
Removendo a opção de mostrar alias e adicionando a opção de escolher se a tabela mostrará VF ou 01 para resultado

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 class="form-check-input"
                 type="checkbox"
                 value=""
-                id="checkboxAlias"
+                id="checkboxValor"
               />
-              <label class="form-check-label small muted" for="checkboxAlias">
-                Alias para colunas
+              <label class="form-check-label small muted" for="checkboxValor">
+                Mostrar resultado com 'V' e 'F'
               </label>
             </div>
             <hr class="mt-0" />
