--- a/index.html
+++ b/index.html
@@ -1,181 +1,138 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gerador de Tabela Verdade</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <style>
-      body {
-        background-color: #d4d4d4;
-        background: url("./cool-background.png") 100% / auto;
-      }
-      .header {
-        position: sticky;
-        top: 0;
-      }
-    </style>
-  </head>
-  <body>
-    <div
-      class="container d-flex align-items-center justify-content-center flex-column"
-    >
-      <div class="d-flex">
-        <div class="card shadow-lg mt-5 mx-3" style="width: 20rem">
-          <div class="card-body">
-            <h5 class="card-title text-center">Gerador de Tabela Verdade</h5>
-            <p class="card-text text-justify">
-              Utilize o campo abaixo para informar a expressão lógica para que
-              seja gerada a tabela verdade.
-            </p>
-            <hr />
-            <input class="w-100" type="text" name="expressao" id="expressao" />
-            <hr class="mb-0" />
-            <div class="form-check form-switch">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                value=""
-                id="checkboxValor"
-              />
-              <label class="form-check-label small muted" for="checkboxValor">
-                Mostrar resultado com 'V' e 'F'
-              </label>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gerador de Tabela Verdade</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div class="container d-flex align-items-center justify-content-center flex-column">
+    <div class="card shadow-lg mt-3 mx-3 position-relative" style="width: 20rem">
+      <div class="card-body">
+        <h5 class="card-title text-center">Gerador de Tabela Verdade</h5>
+        <p class="card-text text-justify">
+          Utilize o campo abaixo para informar a expressão lógica para que
+          seja gerada a tabela verdade.
+        </p>
+        <hr />
+        <input class="w-100 text-right" type="text" name="expressao" id="expressao" disabled />
+        <hr />
+        <div class="p-2">
+          <div class="row gap-2 mb-2">
+            <button class="btn btn-secondary col condicao">~</button>
+            <button class="btn btn-outline-secondary col parenteses">
+              (
+            </button>
+            <button class="btn btn-outline-secondary col parenteses">
+              )
+            </button>
+            <button id="limpar" onclick="Limpar()" class="btn btn-warning col">
+              C
+            </button>
+            <button id="deletar" onclick="Deletar()" class="btn btn-danger col">
+              DEL
+            </button>
+          </div>
+          <div class="d-flex flex-column mb-1">
+            <div class="row gap-2">
+              <button class="btn btn-outline-secondary col parametro">
+                A
+              </button>
+              <button class="btn btn-outline-secondary col parametro">
+                B
+              </button>
+              <button class="btn btn-outline-secondary col parametro">
+                C
+              </button>
+              <button class="btn btn-outline-secondary col parametro">
+                D
+              </button>
             </div>
-            <hr class="mt-0" />
-            <div class="p-2">
-              <div class="row gap-2 mb-2">
-                <button class="btn btn-secondary col condicao">~</button>
-                <button class="btn btn-outline-secondary col parenteses">
-                  (
-                </button>
-                <button class="btn btn-outline-secondary col parenteses">
-                  )
-                </button>
-                <button
-                  id="limpar"
-                  onclick="Limpar()"
-                  class="btn btn-warning col"
-                >
-                  C
-                </button>
-                <button
-                  id="deletar"
-                  onclick="Deletar()"
-                  class="btn btn-danger col"
-                >
-                  DEL
-                </button>
-              </div>
-              <div class="d-flex flex-column mb-1">
-                <div class="row gap-2">
-                  <button class="btn btn-outline-secondary col parametro">
-                    A
-                  </button>
-                  <button class="btn btn-outline-secondary col parametro">
-                    B
-                  </button>
-                  <button class="btn btn-outline-secondary col parametro">
-                    C
-                  </button>
-                  <button class="btn btn-outline-secondary col parametro">
-                    D
-                  </button>
-                </div>
-                <div class="row gap-2 mt-1">
-                  <button class="btn btn-outline-secondary col parametro">
-                    E
-                  </button>
-                  <button class="btn btn-outline-secondary col parametro">
-                    F
-                  </button>
-                  <button class="btn btn-outline-secondary col parametro">
-                    G
-                  </button>
-                  <button class="btn btn-outline-secondary col parametro">
-                    H
-                  </button>
-                </div>
-                <div class="row gap-2 mt-1">
-                  <button class="btn btn-outline-secondary col parametro">
-                    I
-                  </button>
-                  <button class="btn btn-outline-secondary col parametro">
-                    J
-                  </button>
-                  <button class="btn btn-outline-secondary col parametro">
-                    K
-                  </button>
-                  <button class="btn btn-outline-secondary col parametro">
-                    L
-                  </button>
-                </div>
-              </div>
-              <div class="d-flex flex-column">
-                <div class="row gap-2">
-                  <button class="btn btn-secondary col condicao">^</button>
-                  <button class="btn btn-secondary col condicao">∨</button>
-                  <button class="btn btn-secondary col condicao">⊕</button>
-                </div>
-                <div class="row gap-2 mt-1">
-                  <button class="btn btn-secondary col condicao">→</button>
-                  <button class="btn btn-secondary col condicao">↔</button>
-                  <button
-                    id="resultado"
-                    onclick="GeraTabelaVerdade()"
-                    class="btn btn-success col"
-                  >
-                    RES
-                  </button>
-                </div>
-              </div>
+            <div class="row gap-2 mt-1">
+              <button class="btn btn-outline-secondary col parametro">
+                E
+              </button>
+              <button class="btn btn-outline-secondary col parametro">
+                F
+              </button>
+              <button class="btn btn-outline-secondary col parametro">
+                G
+              </button>
+              <button class="btn btn-outline-secondary col parametro">
+                H
+              </button>
+            </div>
+            <div class="row gap-2 mt-1">
+              <button class="btn btn-outline-secondary col parametro">
+                I
+              </button>
+              <button class="btn btn-outline-secondary col parametro">
+                J
+              </button>
+              <button class="btn btn-outline-secondary col parametro">
+                K
+              </button>
+              <button class="btn btn-outline-secondary col parametro">
+                L
+              </button>
             </div>
           </div>
-        </div>
-        <div
-          id="card-exemplos"
-          class="card shadow-lg mt-5 mx-3"
-          style="width: 20rem"
-        >
-          <div class="card-body">
-            <h5 class="card-title text-center">Instruções</h5>
-          </div>
-          <hr class="my-0" />
-          <div class="card-body">
-            <h5 class="card-title text-center">Exemplos</h5>
-            <button class="btn btn-outline-primary w-100 my-1 col condicao">
-              A∨E⊕F↔~E^B
-            </button>
-            <button class="btn btn-outline-primary w-100 my-1 col condicao">
-              (A→B)→((A∨C)→(B∨C))
-            </button>
-            <button class="btn btn-outline-primary w-100 my-1 col condicao">
-              (A∨J^F)⊕(A^(G∨K))
-            </button>
-            <button class="btn btn-outline-primary w-100 my-1 col condicao">
-              (A∨J^F)⊕(A^(G^(F↔~A)∨K))
-            </button>
+          <div class="d-flex flex-column">
+            <div class="row gap-2">
+              <button class="btn btn-secondary col condicao">^</button>
+              <button class="btn btn-secondary col condicao">∨</button>
+              <button class="btn btn-secondary col condicao">⊕</button>
+            </div>
+            <div class="row gap-2 mt-1">
+              <button class="btn btn-secondary col condicao">→</button>
+              <button class="btn btn-secondary col condicao">↔</button>
+              <button id="resultado" onclick="GeraTabelaVerdade()" class="btn btn-success col">
+                RES
+              </button>
+              <a id="anchor-scroll" class="d-none" href="#card-resultado"></a>
+            </div>
           </div>
         </div>
       </div>
-
-      <div id="card-resultado" class="card d-none shadow-lg col-12 my-5">
-        <div class="card-body text-center">
-          <h5 id="titulo-resultado"></h5>
-          <hr class="mb-0" />
+      <div id="btnInfo" class="position-absolute top-0 d-none">
+        <a class="btn btn-dark">
+          <i class="fas fa-cog small"></i>
+        </a>
+      </div>
+    </div>
+    <div id="card-resultado" class="card position-relative d-none shadow-lg col-12 my-5 ">
+      <div id="tableContent" class="card-body text-center">
+        <h5 id="titulo-resultado"></h5>
+        <hr class="mb-0" />
+        <div class="overflow-auto">
           <table class="table table-hover table-sm table-bordered mb-0">
             <thead class="table-secondary header"></thead>
             <tbody></tbody>
           </table>
         </div>
       </div>
+      <div class="position-absolute top-0">
+        <a class="btn btn-primary" href="javascript:window.print();">
+          <i class="fas fa-file-pdf"></i></a>
+      </div>
     </div>
-    <script src="tabela-verdade.js"></script>
-  </body>
+  </div>
+  <div class="small text-center mt-2 fixed-bottom bg-dark text-white">V.1.2.0 - <a class="text-decoration-none"
+      href="https://github.com/vitoriasilva13/tabela-verdade" target="_blank"><i class="fab fa-github"></i>
+      View on GitHub
+    </a>
+  </div>
+  <canvas class="d-none" id="canvas" style="border:2px solid black;" width="500" height="500"></canvas>
+  <script src="tabela-verdade.js"></script>
+</body>
+
 </html>
