--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -133,7 +133,7 @@
     </a>
   </div>
   <canvas class="d-none" id="canvas" style="border:2px solid black;" width="500" height="500"></canvas>
-  <script src="tabela-verdade.js"></script>
+  <script src="assets/js/tabela-verdade.js"></script>
 </body>
 
 </html>
