--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gerador de Tabela Verdade</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body class="position-lg-relative">
   <div class="container d-flex align-items-center justify-content-center flex-column mt-3">
     <ul class="nav nav-pills" id="pills-tab" role="tablist" style="width: 20rem">
       <li class="nav-item" role="presentation">
@@ -36,8 +36,7 @@
           <div class="card-body mt-2">
             <h5 class="card-title text-center">Gerador de Tabela Verdade</h5>
             <p class="card-text text-justify">
-              Utilize o campo abaixo para informar a expressão lógica para que
-              seja gerada a tabela verdade.
+              Utilize o campo abaixo para informar a expressão lógica e gerar a tabela verdade.
             </p>
             <hr />
             <input class="w-100 text-right" type="text" name="expressao" id="expressao" disabled />
@@ -151,6 +150,8 @@
       href="https://github.com/vitoriasilva13/tabela-verdade" target="_blank"><i class="fab fa-github"></i>
       View on GitHub
     </a>
+  </div>
+  <div id="alert-content" class="position-absolute" style="width: 20rem; top: 0; right:0;">
   </div>
   <script src="assets/js/tabela-verdade.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
