Criando splash screen

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
 <body class="position-lg-relative">
 
+  <div class="splash position-absolute top-0 w-100 h-100 bg-dark z-3 d-flex align-items-center justify-content-center">
+    <i class="fa-solid fa-calculator fa-4x"></i>
+  </div>
+
   <div class="container d-flex align-items-center justify-content-center flex-column mt-3">
 
     <!--Navegação Tabulação-->
