--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/fontes.css">
 
 </head>
 
