--- a/assets/tab-content/calculadora.html
+++ b/assets/tab-content/calculadora.html
@@ -1,7 +1,7 @@
 <div class="card-body">
-    <h5 class="card-title text-center mt-2">Gerador de Tabela Verdade</h5>
+    <h4 class="card-title text-center mt-2">Tabela Verdade</h4>
     <p class="card-text text-justify">
-        Utilize o campo abaixo para informar a expressão lógica e gerar a tabela verdade.
+        Utilize o campo abaixo para informar a expressão lógica e gerar a tabela verdade:
     </p>
     <hr />
     <input class="w-100 text-right" type="text" name="expressao" id="expressao" disabled />
@@ -15,54 +15,40 @@
             <button class="btn btn-outline-secondary col parenteses">
                 )
             </button>
-            <button id="limpar" onclick="Limpar()" class="btn btn-warning col">
-                C
+            <button id="limpar" onclick="Limpar()" class="btn btn-danger col">
+                Limpar
             </button>
-            <button id="deletar" onclick="Deletar()" class="btn btn-danger col">
-                DEL
+            <button id="deletar" onclick="Deletar()" class="btn btn-warning col">
+                ←
             </button>
         </div>
         <div class="d-flex flex-column mb-1">
             <div class="row gap-2">
                 <button class="btn btn-outline-secondary col parametro">
-                    A
+                    p
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    B
+                    q
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    C
+                    r
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    D
-                </button>
-            </div>
-            <div class="row gap-2 mt-1">
-                <button class="btn btn-outline-secondary col parametro">
-                    E
-                </button>
-                <button class="btn btn-outline-secondary col parametro">
-                    F
-                </button>
-                <button class="btn btn-outline-secondary col parametro">
-                    G
-                </button>
-                <button class="btn btn-outline-secondary col parametro">
-                    H
+                    s
                 </button>
             </div>
             <div class="row gap-2 mt-1">
                 <button class="btn btn-outline-secondary col parametro">
-                    I
+                    t
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    J
+                    u
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    K
+                    v
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    L
+                    w
                 </button>
             </div>
         </div>
