--- a/assets/tab-content/hist.html
+++ b/assets/tab-content/hist.html
@@ -3,6 +3,13 @@
         Histórico
     </h5>
     <hr>
+    <table class="table">
+        <thead>
+            <th>Expressão</th>
+            <th><i class="fa-solid fa-eye"></i></th>
+        </thead>
+        <tbody></tbody>
+    </table>
     <div class="text-secondary">
         <i class="fa-solid fa-screwdriver-wrench fa-xl"></i>
         <h3>Recurso em desenvolvimento</h3>
