Revert calculadora.html

--- a/assets/tab-content/calculadora.html
+++ b/assets/tab-content/calculadora.html
@@ -1,7 +1,7 @@
 <div class="card-body">
-    <h4 class="card-title text-center mt-2">Tabela Verdade</h4>
+    <h5 class="card-title text-center mt-2">Gerador de Tabela Verdade</h5>
     <p class="card-text text-justify">
-        Utilize o campo abaixo para informar a expressão lógica e gerar a tabela verdade:
+        Utilize o campo abaixo para informar a expressão lógica e gerar a tabela verdade.
     </p>
     <hr />
     <input class="w-100 text-right" type="text" name="expressao" id="expressao" disabled />
@@ -15,40 +15,54 @@
             <button class="btn btn-outline-secondary col parenteses">
                 )
             </button>
-            <button id="limpar" onclick="Limpar()" class="btn btn-danger col">
-                Limpar
+            <button id="limpar" onclick="Limpar()" class="btn btn-warning col">
+                C
             </button>
-            <button id="deletar" onclick="Deletar()" class="btn btn-warning col">
-                ←
+            <button id="deletar" onclick="Deletar()" class="btn btn-danger col">
+                DEL
             </button>
         </div>
         <div class="d-flex flex-column mb-1">
             <div class="row gap-2">
                 <button class="btn btn-outline-secondary col parametro">
-                    p
+                    A
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    q
+                    B
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    r
+                    C
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    s
+                    D
                 </button>
             </div>
             <div class="row gap-2 mt-1">
                 <button class="btn btn-outline-secondary col parametro">
-                    t
+                    E
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    u
+                    F
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    v
+                    G
                 </button>
                 <button class="btn btn-outline-secondary col parametro">
-                    w
+                    H
+                </button>
+            </div>
+            <div class="row gap-2 mt-1">
+                <button class="btn btn-outline-secondary col parametro">
+                    I
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                    J
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                    K
+                </button>
+                <button class="btn btn-outline-secondary col parametro">
+                    L
                 </button>
             </div>
         </div>
